[tool.poetry]
name = "new-proj"
version = "0.1.0"
description = ""
authors = ["Abhishek Kumar Gangwar <abhishekkumargangwar@gmail.com>"]
readme = "README.md"
packages = [{include = "new_proj"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
